--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <main>
       <section class="hero section flow text-center">
         <div class="wrapper" data-width="wide" data-padding="compact">
-          <h1>
+          <h1 class="hero__title">
             Discover the World of
-            <span class="text-brand">Mushroom Foraging</span>
+            <span>Mushroom Foraging</span>
           </h1>
         </div>
         <div class="wrapper" data-width="narrow">
@@ -202,6 +202,9 @@
       </section>
     </main>
 
-    <footer class="site-footer"></footer>
+    <footer class="site-footer">
+      <p>Happy Foraging!</p>
+      <a href="mailto:contact@fungifinders.com">contact@fungifinders.com</a>
+    </footer>
   </body>
 </html>
