Fix wrong width in 2-columns section

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       </div>
     </header>
     <main>
-      <section class="hero section flow text-center">
-        <div class="wrapper" data-width="wide" data-padding="compact">
+      <section class="hero section flow" data-padding="compact">
+        <div class="wrapper">
           <h1 class="hero__title">
             Discover the World of
             <span>Mushroom Foraging</span>
@@ -135,7 +135,7 @@
 
       <!-- Two columns-->
       <section class="background-extra-dark section">
-        <div class="wrapper" data-width="narrow">
+        <div class="wrapper" data-width="wide">
           <div
             class="equal-columns"
             data-gap="large"
@@ -170,7 +170,7 @@
       </section>
 
       <section class="section">
-        <div class="wrapper" data-width="narrow">
+        <div class="wrapper" data-width="wide">
           <div
             class="equal-columns"
             data-gap="large"
