Style buttons and footer

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     </main>
 
     <footer class="site-footer">
-      <p>Happy Foraging!</p>
+      <p class="site-footer__title">Happy Foraging!</p>
       <a href="mailto:contact@fungifinders.com">contact@fungifinders.com</a>
     </footer>
   </body>
