--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
           <a href="/">
             <img src="assets/fungi-finders.svg" alt="" />
           </a>
-          <nav class="primary-navigation">
+          <button aria-controls="primary-navigation" aria-expanded="false">
+            <span class="visually-hidden">Menu</span>
+            <img src="/assets/hamburger.svg" alt="" />
+          </button>
+          <nav id="primary-navigation">
             <ul>
               <li><a href="/">Discover</a></li>
               <li><a href="#">Mushroom Guide</a></li>
