--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
           <a href="/">
             <img src="assets/fungi-finders.svg" alt="" />
           </a>
-          <button aria-controls="primary-navigation" aria-expanded="false">
+          <button aria-controls="primary-nav" aria-expanded="false">
             <span class="visually-hidden">Menu</span>
             <img src="/assets/hamburger.svg" alt="" />
           </button>
-          <nav id="primary-navigation">
-            <ul>
+          <nav id="primary-nav" class="primary-navigation">
+            <ul role="list">
               <li><a href="/">Discover</a></li>
               <li><a href="#">Mushroom Guide</a></li>
               <li><a href="#">FAQ</a></li>
