--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
           <a href="/">
             <img src="assets/fungi-finders.svg" alt="" />
           </a>
-          <button aria-controls="primary-nav" aria-expanded="false">
+          <button aria-controls="primary-navigation" aria-expanded="false">
             <span class="visually-hidden">Menu</span>
             <img src="/assets/hamburger.svg" alt="" />
           </button>
-          <nav id="primary-nav" class="primary-navigation">
-            <ul role="list">
+          <nav class="primary-navigation">
+            <ul>
               <li><a href="/">Discover</a></li>
-              <li><a href="#">Mushroom Guide</a></li>
-              <li><a href="#">FAQ</a></li>
+              <li><a href="mushroom-guide.html">Mushroom guide</a></li>
+              <li><a href="mushroom-guide.html#faq">FAQ</a></li>
             </ul>
           </nav>
         </div>
