--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Outfit:wght@100..900&display=swap"
       rel="stylesheet"
     />
+    <script src="/main.js" defer></script>
   </head>
   <body>
     <header class="site-header">
