--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="/main.js" defer></script>
   </head>
   <body>
+    <a class="skip-to-main" href="#main">Skip to main content</a>
     <header class="site-header">
       <div class="wrapper">
         <div class="site-header__inner">
@@ -35,7 +36,7 @@
         </div>
       </div>
     </header>
-    <main>
+    <main id="main">
       <section class="hero section flow" data-padding="compact">
         <div class="wrapper">
           <h1 class="hero__title">
