fix missing wrapper

--- a/mushroom-guide.html
+++ b/mushroom-guide.html
@@ -61,28 +61,30 @@
 
       <!-- Where to look section -->
       <section class="background-accent section">
-        <div
-          class="equal-columns"
-          data-vertical-alignment="centered"
-          data-gap="large"
-        >
-          <div>
-            <img
-              src="/assets/where-to-look.webp"
-              alt="A closeup of a mushroom growing on a lush green forest floor"
-            />
-          </div>
-          <div class="flow font-size-lg">
-            <h2 class="section-title">Where to look</h2>
-            <p>Different species grow in different types of environments.</p>
-            <p>
-              Forests are always a good starting place, though, with a wide
-              range of species that grow in them.
-            </p>
-            <p>
-              If you’re after something specific, you can use our reference
-              guide below to help you out.
-            </p>
+        <div class="wrapper" data-width="wide">
+          <div
+            class="equal-columns"
+            data-vertical-alignment="centered"
+            data-gap="large"
+          >
+            <div>
+              <img
+                src="/assets/where-to-look.webp"
+                alt="A closeup of a mushroom growing on a lush green forest floor"
+              />
+            </div>
+            <div class="flow font-size-lg">
+              <h2 class="section-title">Where to look</h2>
+              <p>Different species grow in different types of environments.</p>
+              <p>
+                Forests are always a good starting place, though, with a wide
+                range of species that grow in them.
+              </p>
+              <p>
+                If you’re after something specific, you can use our reference
+                guide below to help you out.
+              </p>
+            </div>
           </div>
         </div>
       </section>
