filtering, bento grid, and some more added

--- a/mushroom-guide.html
+++ b/mushroom-guide.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
     />
     <script src="/main.js" defer></script>
+    <script src="/mushroom-filter.js" defer></script>
   </head>
   <body>
     <a class="skip-to-main" href="#main">Skip to main content</a>
@@ -94,13 +95,14 @@
           <h2 class="section-title">Get to know your mushrooms</h2>
 
           <div class="flex-group">
-            <select>
+            <!-- There is a JS script that changes hidden to false once JS is loaded -->
+            <select name="season" id="season" hidden>
               <option value="all">Season: All</option>
               <option value="spring">Spring</option>
               <option value="summer">Summer</option>
               <option value="fall">Fall</option>
             </select>
-            <select>
+            <select name="edible" id="edible" hidden>
               <option value="all">Type: All</option>
               <option value="edible">Edible</option>
               <option value="toxic">Toxic</option>
@@ -108,7 +110,7 @@
           </div>
 
           <!-- grid of mushrooms -->
-          <div class="grid-auto-fit">
+          <div class="grid-auto-fill">
             <div class="card">
               <h3 class="card__title">Chanterelle</h3>
               <ul
@@ -409,11 +411,18 @@
                 toxic look-alikes
               </p>
             </div>
+            <div class="no-results-message" hidden>
+              No cards match these filters
+            </div>
           </div>
         </div>
       </section>
 
-      <section class="background-extra-dark section" data-padding="compact">
+      <section
+        id="faq"
+        class="background-extra-dark section"
+        data-padding="compact"
+      >
         <div class="wrapper flow" data-width="wide">
           <h2 class="section-title">Frequently Asked Questions</h2>
 
